--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/core": "^4.15.0",
+    "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -35,5 +36,12 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCgizXqo3czDUFXowqrVB-1AVR4pxDIQFI"
+      }
+    }
+  }
 }
